# tranquil-pds-mirror

./: .containerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  config.dev.toml  docker-compose.prod.yaml  docker-compose.yaml  example.toml  flake.nix  frontend.nix  justfile  module.nix  pkgs.nix  shell.nix
.config/: nextest.toml
.sqlx/: query-09142b5a6b91fe4fd795fb6c85af5461e2621f6c3545b6d26e4618d813904b75.json  query-0b895d105363a60040323c5c47bc897905af3da980d0dc1b3b60bbdcdd90ea7a.json  query-0bb2cb6af37bff735b6b380697fc8e1fa2034ca0600e8c16e1e362b722192327.json  query-122d79e006c0e11214e3cf11cfb98bdff6fbf156893b482572532ebcd8979e61.json  query-18bbda5582db1b32d02ab8a3eee970c9508b9bd67239c2f936639a9f863b30ff.json  query-2c3c0740793f29b9bd9e0f81c2372d427dee091e20da8f71ae1e5f2769aa985d.json  query-3cc7247d2cd7e85a6f21d783dd956f8fecc6f63c994014bb4e91504d498b5fd5.json  query-4f3ef746cb5fc0916d3df5f92494c538497d3b9c1cfcc6e44c9b80f2193094f6.json  query-51e029e572777e6a103fd7fd5550494de9d4cac7e3ff84e27ddec1a6aaefc047.json  query-714a1c9a73e2fed8182d4ab2fe4a2c33bc10a52e27ed95d3a6641477ae42395e.json  query-7cdf3b8136782a5b2e4aff91907a680566b4610e6cbf9d9396d31f9bbd99c3b8.json  query-8003624cedbac8b094c83933578517abfb2eaf8e59d1d52c7ea59bf5d11cfcfe.json  query-800b93a38eef70bafdf0a1b221994f3c19ab562f84d18265376296a592b4c767.json  query-82276a34f473ff8b9790b78915ae3f72873d4b748cdb47bd2b81edc2f7a6e5a8.json  query-856e458c1c78f030545dc147f76d1b91fa4cc6e178eb51133c52358855ba3f02.json  query-8ccd42b5b1b75f45e094889ee26af8517de28ca687efa81fd9c4fce598338fe9.json  query-8f4357f7a18ddcf6b686a4555f244d37c35917364b8f917ca6ee2d4030ace742.json  query-957bc81c63510ab502d2f8cea75dafcbdf2c8ebb448c86990d5e404ee5280438.json  query-9ba7869f29286cfd6b811ffa1e26bda1d637b98b44be66cdc265b1af4cec2d4f.json  query-a27e93bc594babbada10afe5c3e33a65909ec69c579329916833e4b0fe2332d3.json  query-bd0407818c8bdae1f1024777951b08cb9c386fe751722e1caf6ad243e271697a.json  query-cf874abcb72017e775fe699a0b77ae9341355f30e4af84968ffeb9135dba745f.json  query-d4eacb9bca838dd18dcfd8ca39b83ef50968bfaaabc213536c049cc222ffe9c8.json  query-da2770e44c0ec21756ce4b6b0c57abff4f38cd8c680c5ced7d3b35f3c1f58da7.json  query-dfe011b2d2bafbbbbea508a4977fc34bb1be4cf2612296df23763e6e5841c33e.json  query-f16d41b41a5388997e6ed408da55056173340ed12b60b1a956de87f73f9d0824.json  query-f1c4ec28b02d09ffce35aa8249c1747a70c12a3ecfc1ff6ca1847840f770db2f.json
.tangled/workflows/: publish-image.yml
crates/tranquil-api/src/: delegation.rs  lib.rs
crates/tranquil-auth/src/: token.rs  types.rs
crates/tranquil-comms/src/: locale.rs
crates/tranquil-config/src/: lib.rs
crates/tranquil-db-traits/src/: infra.rs  (+3 more)
crates/tranquil-pds/: Cargo.toml
crates/tranquil-pds/src/: did.rs  lib.rs  repo_ops.rs  scheduled.rs  state.rs  util.rs
crates/tranquil-pds/src/api/: error.rs  invite.rs  mod.rs  proxy.rs
crates/tranquil-pds/src/auth/: account_verified.rs  email_token.rs  extractor.rs  legacy_2fa.rs  mod.rs
crates/tranquil-pds/src/delegation/: mod.rs  scopes.rs
crates/tranquil-pds/src/handle/: mod.rs
crates/tranquil-pds/src/rate_limit/: extractor.rs
crates/tranquil-pds/src/repo/: mod.rs
crates/tranquil-pds/tests/: car_export_detects_corruption.rs  firehose_inline_blocks.rs  firehose_validation.rs  gc_compaction_restart.rs  invite_registration.rs  jwt_security.rs  legacy_2fa.rs  lifecycle_record.rs  mst_firehose_e2e.rs  mst_inductive_firehose.rs  mst_integrity.rs  mst_property_fuzz.rs  mst_repair_audit.rs  mst_repair_durability.rs  mst_self_heal_e2e.rs  mst_structural_repair.rs  oauth_token_eviction.rs  password_reset.rs  plc_operations.rs  repair_leaf_loss.rs  repo_lifecycle.rs  scope_edge_cases.rs  store_parity.rs
crates/tranquil-pds/tests/common/: mod.rs
crates/tranquil-ripple/: Cargo.toml
crates/tranquil-ripple/src/: engine.rs  gossip.rs  metrics.rs  transport.rs
crates/tranquil-server/: Cargo.toml
crates/tranquil-server/src/: http3.rs  main.rs  tls.rs
crates/tranquil-store/: Cargo.toml
crates/tranquil-store/benches/: blockstore.rs
crates/tranquil-store/fuzz/fuzz_targets/: gauntlet_micro.rs
crates/tranquil-store/gauntlet-configs/: blockstore_timetravel.toml  firehose_timetravel.toml  fsync_repro.toml  fsync_repro_hi.toml  probe_isolate.toml
crates/tranquil-store/src/: backup.rs  clock.rs  consistency.rs  lib.rs  sim.rs
crates/tranquil-store/src/blockstore/: compaction.rs  group_commit.rs  hash_index.rs  hint.rs  mod.rs  reader.rs  repair.rs  store.rs  types.rs
crates/tranquil-store/src/eventlog/: notifier.rs  writer.rs
crates/tranquil-store/src/gauntlet/: chaos_walker.rs  invariants.rs  metrics.rs  mod.rs  op.rs  oracle.rs  overrides.rs  runner.rs  scenarios.rs  shrink.rs  soak.rs  workload.rs
crates/tranquil-store/src/metastore/: client.rs  commit_ops.rs  delegation_ops.rs  event_ops.rs  handler.rs  infra_ops.rs  mod.rs  repo_meta.rs  repo_ops.rs  session_ops.rs  user_ops.rs  users.rs
crates/tranquil-store/tests/: archival_recovery.rs  backup.rs  checkpoint_race.rs  compaction_liveness.rs  compaction_restart.rs  external_corruption_recovery.rs  gauntlet_index_backed.rs  gauntlet_smoke.rs  gc.rs  gc_stress.rs  recovery_preserves_indexed_blocks.rs  rotation_robustness.rs  sim_blockstore.rs  sim_metastore.rs  sim_metastore_paths.rs  sim_soak.rs
crates/tranquil-store/tests/common/: mod.rs
crates/tranquil-sync/: Cargo.toml
crates/tranquil-sync/src/: listener.rs  repo.rs  subscribe_repos.rs
deploy/nginx/: nginx-pod.conf
deploy/openrc/: tranquil-pds-app  tranquil-pds-db  tranquil-pds-nginx  tranquil-pds-pod
deploy/quadlets/: tranquil-pds-app.container  tranquil-pds-nginx.container
docs/: 1_WELCOME_TO_TRANQUIL_PDS.md  2_INSTALL_CONTAINERS.md  2_INSTALL_KUBERNETES.md  2_INSTALL_NIX.md  3_DEBUGGING_YOUR_SETUP.md  3_LOCAL_DEVELOPMENT.md  4_INSTALL_USING_EMBEDDED_DB.md
frontend/: package.json  pnpm-lock.yaml
frontend/public/: oauth-client-metadata.json
migrations/: 20260523_add_inbound_migration_flag.sql  20260529_firehose_outbox_sequencing.sql
scripts/: init-dev-dbs.sql
(+48 files in other folders)
