[package]
name = "tranquil-ripple"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tranquil-config = { workspace = true }
tranquil-infra = { workspace = true }

async-trait = { workspace = true }
backon = { workspace = true }
bincode = { workspace = true }
foca = { workspace = true }
metrics = { workspace = true }
parking_lot = { workspace = true }
quinn = { workspace = true }
rand = "0.9"
rcgen = { workspace = true }
rustls = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["net", "io-util", "sync", "time"] }
tokio-util = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
futures = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
