[package]
name = "tranquil-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tranquil-pds = { workspace = true }
tranquil-sync = { workspace = true }
tranquil-api = { workspace = true }
tranquil-oauth-server = { workspace = true }
tranquil-config = { workspace = true }
tranquil-signal = { workspace = true }

arc-swap = { workspace = true }
axum = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
dotenvy = { workspace = true }
ed25519-dalek = { workspace = true }
futures-util = { workspace = true }
h3 = { workspace = true }
h3-quinn = { workspace = true }
hex = { workspace = true }
http = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
quinn = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
tokio-util = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
rcgen = { workspace = true }

[features]
default = ["frontend", "s3", "valkey"]
frontend = ["tranquil-pds/frontend"]
s3 = ["tranquil-pds/s3"]
valkey = ["tranquil-pds/valkey"]
native-tls-roots = ["tranquil-pds/native-tls-roots"]
