[package]
name = "tranquil-sync"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tranquil-pds = { workspace = true }
tranquil-types = { workspace = true }
tranquil-config = { workspace = true }
tranquil-db-traits = { workspace = true }

anyhow = { workspace = true }
axum = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
cid = { workspace = true }
futures = { workspace = true }
ipld-core = { workspace = true }
jacquard-repo = { workspace = true }
serde = { workspace = true }
serde_ipld_dagcbor = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
axum-test = { version = "19.1.1", features = [ "ws" ] }
sqlx = { workspace = true }
tokio-util = { workspace = true }
tracing-subscriber.workspace = true
